[HW-21] refactoring